fixed up white space

--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,6 @@ header {
   padding: 10px;
 }
 
-/* #indexHeader{ */
-  background-color: burlywood;
-}
-
 #theadName{
   margin: 300px;
 }
